--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,8 @@ api:
 
 server:
   port: 8082
+  servlet:
+    context-path: /template-core
 
 spring:
   application:
@@ -26,6 +28,10 @@ spring:
       ddl-auto: update
     open-in-view: false
     # show-sql: true
+
+  mvc:
+    pathmatch:
+      matching-strategy: ANT_PATH_MATCHER
 
 template:
   admin:
