--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,12 @@
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URL}
+
+logging:
+  file:
+    name: ${LOG_PATH}/${spring.application.name}.log
+
 server:
   port: 8082
 
@@ -11,11 +20,9 @@ spring:
       spec: maximumSize=100
     type: caffeine
 
-  config:
-    import: local.yaml
-
   datasource:
     password: ${DB_PASSWORD}
+    url: ${DB_URL}
     username: ${DB_USERNAME}
 
   jpa:
